# Simple-Secrets-Manager

./: .deepsource.toml  .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  build.sh  connection.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py
.githooks/: pre-commit  pre-push
.github/: CONTRIBUTING.md
Access/: is_auth.py  onboarding.py  policy.py  scopes.py  tokens.py  userpass.py
Api/: api.py  core.py  serialization.py  versioning.py
Engines/: audit.py  common.py  compare_issues.py  configs.py  groups.py  kv.py  memberships.py  projects.py  rbac.py  secret_icons.py  secrets_v2.py  users.py  versioning.py  workspaces.py
docker/: nginx.unified.conf  supervisord.conf
docs/: CLI.md  DEPRECATIONS.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  FIRST_TIME_SETUP.md  README_dockerhub.md
frontend/: AGENTS.md  Dockerfile  README.md  build.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: build_icon_index.py  deploy_stack.sh  install-git-hooks.sh  quality.sh  version_sync.py
ssm_cli/: __init__.py  __main__.py  api.py  auth.py  cache.py  config.py  exceptions.py  main.py  resolve.py  run_utils.py
tests/: test_audit_pagination.py  test_cli_api.py  test_cli_commands.py  test_cli_fetch_cache.py  test_cli_resolve.py  test_cli_run_utils.py  test_cli_secrets_read_commands.py  test_cli_secrets_write_commands.py  test_compare_issues.py  test_compare_secrets.py  test_configs_list.py  test_inheritance.py  test_kv_deprecations.py  test_memberships.py  test_onboarding.py  test_rbac.py  test_reqparse_bool_inputs.py  test_scopes.py  (+6 more)
(+89 files in other folders)
