[project]
name = "simple-secrets-manager"
version = "1.3.1"
description = "Securely store and deliver tokens, passwords, API keys, and other secrets using HTTP API, Swagger UI, or Python Package."
authors = [
    { name = "Krishnakanth Alagiri", email = "39209037+bearlike@users.noreply.github.com" },
]
license = "CC0-1.0"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "python-dotenv>=1.1.0,<2.0.0",
    "loguru>=0.7.3,<0.8.0",
    "flask-httpauth>4,<5",
    "flask-cors>=5.0.0,<6.0.0",
    "flask-restx>=0.5.1",
    "pymongo>4,<5",
    "click>=8.1.8,<9.0.0",
    "rich>=13.9.4,<14.0.0",
    "requests>=2.32.3,<3.0.0",
    "keyring>=25.6.0,<26.0.0",
]

[project.urls]
Repository = "https://github.com/bearlike/simple-secrets-manager.git"
Issues = "https://github.com/bearlike/simple-secrets-manager/issues"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7.0.0",
    "pytest>=8.3.5,<9.0.0",
    "ruff>=0.13.0,<0.14.0",
    "mypy>=1.17.1,<2.0.0",
]

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
ssm = "ssm_cli.main:cli"
ssm-cli = "ssm_cli.main:cli"

[tool.setuptools]
packages = ["Access", "Api", "Engines", "ssm_cli"]
py-modules = ["connection", "server"]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
exclude = [
    "^\\.venv/",
    "^build/",
    "^simple_secrets_manager\\.egg-info/",
]
